2003-06-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (noinst_HEADERS): Add x-perl.h.
	(FORMAT_SOURCE): Add format-perl.c.
	(xgettext_SOURCES): Add x-perl.c.
	* message.h (enum format_type): Mention perl between tcl and php.
	* message.c (format_language, format_language_pretty): Likewise.
	* format.h (formatstring_perl): Likewise.
	* format.c (formatstring_parsers): Likewise.
	* format-perl.c: Use GNU coding style. Prefer xmalloc over xcalloc.
	* x-perl.h: Assume ANSI C.
	* x-perl.c: Assume ANSI C. Use GNU coding style. Prefer xmalloc over
	xcalloc.
	(token_buf): Remove unused variable.
	(xcalloc_debug, stack_push, stack_pop): Remove unused functions.
	* xgettext.c: Mention perl between tcl and php.

2003-06-11  Guido Flohr  <guido@imperia.net>

	* message.h (enum format_type): New enum value 'format_perl'.
	(NFORMATS): Increment.
	* message.c (format_language, format_language_pretty): Add entry
	for perl.
	* format.h (formatstring_perl): New declaration.
	* format-perl.c: New file.
	* format.c (formatstring_parsers): Add entry for perl.
	* x-perl.h: New file.
	* x-perl.c: New file.
	* xgettext.c: Include x-perl.h.
	(main): Call x_perl_extract_all, x_perl_keyword.
	(usage): Mention Perl language.
	(language_to_extractor): Add Perl rule.
	(extension_to_language): Add Perl rule.

2003-06-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms (LDADD): Take options from .opt files.
	(libiconv.opt): New rule.
	(msgcmp.exe, msgfmt.exe, msgmerge.exe, msgunfmt.exe, xgettext.exe,
	msgattrib.exe, msgcat.exe, msgcomm.exe, msgconv.exe, msgen.exe,
	msgexec.exe, msgfilter.exe, msggrep.exe, msginit.exe, msguniq.exe):
	Depend on it.
	* plural-eval.c: Include "eval-plural.h" without a path, rely on the
	Makefile's -I options instead.
	* read-properties.c (conv_from_java): Change type of q to
	'unsigned char *'.
	Reported by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-05-27  Bruno Haible  <bruno@clisp.org>

	* plural-table.c (plural_table): Correct entry for Slovak.